# ECLI

./: .gitignore  CMakeLists.txt  COPYING  README  README.md  TODO
examples/: README.md  hello.tecl
examples/include/: ecli.eclm
include/: config.h.in  ecl.h  ecli.h  ins.h  state.h  util.h  value.h
src/: ecl.c  ins.c  interpreter.c  main.c  state.c  util.c  value.c
